# biosensor.solver-2D

./: .gitignore  .kateproject  BUILDING  ChangeLog  Config.cc  Config.hh  Doxyfile  Doxyfile.in  Makefile  Makefile-dev  Makefile.am  Makefile.in  Model.cc  Model.hh  NOTICE  README  SolveListener.cc  SolveListener.hh  TODO  acinclude.m4  aclocal.m4  catalog-local_install.xml  configure  configure.ac  libtool  log4cpp.properties  log4j.properties  test1.cc  tmp-animate.sh  tmp-injected_electrode.xml  valgrind.supp
src/: Exceptions.cc  Exceptions.hh  Makefile.am  Makefile.in  README  SolveListener.cc  SolveListener.hh  cfg_Config.cc  cfg_ConfigAnalyzer.cc  cfg_ConfigAnalyzer.hh  dm_Abstract.cc  dm_Abstract.hh  dm_Array.cc  dm_Array.hh  dm_Linked.cc  dm_Linked.hh  sa_Abstract.cc  sa_Abstract.hh  sa_BasicExplicit.cc  sa_BasicExplicit.hh  sa_BasicImplicit.cc  sa_BasicImplicit.hh  test1.cc
src/bio-editor/: Makefile.am  Makefile.in  bio-editor.man  main.cxx
src/bio-output/: Makefile.am  bio-output  bio-output.man
src/bio-solver/: Makefile.am  Makefile.in  bio-solver.man  main.cxx
src/bio_ers/: .gitignore  Makefile.am  README  bio_ers.app.in  bio_ers.rel.in  rebar.config
src/bio_ers/doc/: overview.edoc
src/bio_ers/doc/bio_ers_uml/: bio_ers_uml.mdzip
src/bio_ers/ebin/: bio_ers.app
src/bio_ers/example/: test_proc.erl
src/bio_ers/include/: README  bio_ers.hrl  bio_ers_queue_mifcl2.hrl  bio_ers_solver.hrl
src/bio_ers/priv/: README
src/bio_ers/src/: bio_ers.app.src.in  bio_ers.erl  bio_ers_app.erl  bio_ers_exp_series.erl  bio_ers_experiment.erl  bio_ers_model.erl  bio_ers_queue.erl  bio_ers_queue_mgr.erl  bio_ers_queue_mgr_sup.erl  bio_ers_queue_mif2_ssh.erl  bio_ers_queue_mifcl2.erl  bio_ers_queue_mifcl2_sim.erl  bio_ers_queue_mifcl2_sim_sup.erl  bio_ers_queue_mifcl2_ssh_chan.erl  bio_ers_queue_mifcl2_ssh_mgr.erl  bio_ers_queue_mifcl2_ssh_sup.erl  bio_ers_queue_mifcl2_sup.erl  bio_ers_queue_sup.erl  bio_ers_solver.erl  bio_ers_solver.hrl  bio_ers_store.erl  bio_ers_sup.erl  ebi_app.erl
src/bio_ers/test/: README  bio_ers_model_tests-AllElems.xml  bio_ers_model_tests-CNT-2D.xml  bio_ers_model_tests.erl  bio_ers_queue_mif2_ssh_tests.erl  bio_ers_queue_mifcl2_ssh_chan_tests.erl  bio_ers_solver_port-t01-proxy  bio_ers_solver_port-t01-valgrind  bio_ers_solver_tests.erl  bio_ers_testsuite.erl  config-base_k3-infty-a-1D-t5.xml
src/bio_ers_solver_port/: ErlangIO.cxx  ErlangIO.hxx  ErlangMsgCodec.cxx  ErlangMsgCodec.hxx  ErlangMsgCodec_checkpoint.cxx  ErlangMsgCodec_checkpoint.hxx  ErlangMsgCodec_conf.cxx  ErlangMsgCodec_conf.hxx  ErlangMsgCodec_config.cxx  ErlangMsgCodec_config.hxx  ErlangMsgCodec_stop.cxx  ErlangMsgCodec_stop.hxx  ErlangRecordDef.cxx  ErlangRecordDef.hxx  Makefile.am  README  bio_ers_solver_port.cxx  main.cxx  valgrind.supp
src/cfg/: Config.cc
src/dm/: AbstractDM.hh  ArrayDM.hh  LinkedDM.cc  LinkedDM.hh
src/libbiosensor/: Makefile.am  Makefile.in  README  biosensor.hxx  biosensor.hxx.in
src/libbiosensor-slv-fd/: Makefile.am  Makefile.in  README  biosensor-slv-fd.hxx  biosensor-slv-fd.hxx.in
src/libbiosensor-slv-fd/bio/fd/: FiniteDifferencesSolverAnalyzer.cxx  FiniteDifferencesSolverAnalyzer.hxx  SolverFactory.cxx
src/libbiosensor-xml/: Makefile.am  Makefile.in  Model-example-1D.xml  Model-example-2D.xml  Model-example-2D_b.xml  Model.cxx  Model.hxx  Model.xsd  ModelBound.cxx  ModelBound.hxx  ModelBound.xsd  ModelBoundCondition.xsd  ModelListener.xsd  ModelMediumReaction.xsd  ModelReaction.cxx  ModelReaction.hxx  ModelReaction.xsd  ModelSolver.cxx  ModelSolver.hxx  ModelSolver.xsd  ModelTransducer.cxx  ModelTransducer.hxx  ModelTransducer.xsd  biosensor-xml.hxx  biosensor-xml.hxx.in
src/libbiosensor/bio/: DelegatingFactory.cxx  DelegatingFactory.hxx  Exception.cxx  Exception.hxx  IFactory.cxx  IFactory.hxx  Logging.hxx  MainFactory.cxx  MainFactory.hxx  README  Splitted1DArea.hxx  Splitted2DArea.hxx
src/libbiosensor/bio/cfg/: BoundAnalyzer.cxx  BoundAnalyzer.hxx  DefaultSymbolResolver.cxx  DefaultSymbolResolver.hxx  IConfigAnalyzer.cxx  IConfigAnalyzer.hxx  IConfigTransformer.cxx  IConfigTransformer.hxx  IConfigValidator.cxx  IConfigValidator.hxx  ISymbolResolver.hxx  ReactionAnalyzer.cxx  ReactionAnalyzer.hxx  StructureAnalyzer.cxx  StructureAnalyzer.hxx
src/libbiosensor/bio/dm/: AbstractCursor2D.hxx  CompositeSegmentSplit.cxx  CompositeSegmentSplit.hxx  ConstantSegmentSplit.cxx  ConstantSegmentSplit.hxx  Cursor2DOpenBounds.cxx  Cursor2DOpenBounds.hxx  Cursor2DWithoutBounds.cxx  Cursor2DWithoutBounds.hxx  IComposite1D.cxx  IComposite1D.hxx  IComposite1DArea.cxx  IComposite1DArea.hxx  IComposite1DBound.cxx  IComposite1DBound.hxx  IComposite2D.cxx  IComposite2D.hxx  IComposite2DArea.cxx  IComposite2DArea.hxx  IComposite2DBound.cxx  IComposite2DBound.hxx  IComposite2DCorner.cxx  IComposite2DCorner.hxx  IConcentrations.cxx  IConcentrations.hxx  ICursor1D.cxx  ICursor1D.hxx  ICursor2D.cxx  ICursor2D.hxx  IDataModel.cxx  IDataModel.hxx  IGrid.cxx  IGrid.hxx  IGrid1D.cxx  IGrid1D.hxx  IGrid2D.cxx  IGrid2D.hxx  ISegmentSplit.cxx  ISegmentSplit.hxx  NullDM.cxx  (+2 more)
src/libbiosensor/bio/io/: AveragedConcentration.cxx  AveragedConcentration.hxx  ConcentrationProfile.cxx  ConcentrationProfile.hxx  ConcentrationProfileInMemory.cxx  ConcentrationProfileInMemory.hxx  ConcentrationProfileReader.cxx  ConcentrationProfileReader.hxx  CurrentDensity.cxx  CurrentDensity.hxx  DebugSL.cxx  DebugSL.hxx  FilesystemContext.cxx  FilesystemContext.hxx  FilesystemOutputContext.cxx  FilesystemOutputContext.hxx  GnuplotDataSL.cxx  GnuplotDataSL.hxx  IContext.cxx  IContext.hxx  IOutput.cxx  IOutput.hxx  IOutputContext.cxx  IOutputContext.hxx  IRepeatable.cxx  IRepeatable.hxx
src/libbiosensor/bio/slv/: AbstractIterativeSolver.cxx  AbstractIterativeSolver.hxx  AbstractSolver.cxx  AbstractSolver.hxx  AdjustTimeStepAdaptively.cxx  AdjustTimeStepAdaptively.hxx  (+45 more)
src/sa/: AbstractSA.hh  BasicExplicitSA.cc  BasicExplicitSA.hh  Makefile.am
src/xsd/: Makefile.am  Makefile.in  Model-example-1D.xml  Model-example-2D.xml  Model.xsd  ModelBoundCondition.xsd  ModelMediumReaction.xsd
(+148 files in other folders)
