datarootdir = @datarootdir@

SUBDIRS = xsd

bin_PROGRAMS = test1
test1_SOURCES = \
	Exceptions.cc \
	SolveListener.cc \
	test1.cc \
	cfg_Config.cc \
	cfg_ConfigAnalyzer.cc \
	dm_Abstract.cc \
	dm_Array.cc \
	dm_Linked.cc \
	sa_Abstract.cc \
	sa_BasicExplicit.cc \
	sa_BasicImplicit.cc \
	xsd/Model.cc \
	xsd/ModelBoundCondition.cc \
	xsd/ModelMediumReaction.cc 

#test1_LDADD = xsd/libxsd.a

